// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid rendering render 1`] = `
"+-------------------+
| [92m3[39m   [92m3[39m   [92m3[39m   [92m3[39m   [92m3[39m |
+-------------------+
| [34m2[39m   [34m2[39m   [34m2[39m   [34m2[39m   [34m2[39m |
+-------+   +-------+
| [31m1[39m   [31m1[39m | [34m2[39m | [102m[30m0[39m[49m   [102m[30m0[39m[49m |
|       +---+       |
| [31m1[39m   [31m1[39m | [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m |
|       |           |
| [31m1[39m   [31m1[39m | [102m[30m0[39m[49m   [102m[30m0[39m[49m   [102m[30m0[39m[49m |
+-------+-----------+"
`;

exports[`Grid rendering render 2`] = `
"+-------------------+
| 3   3   3   3   3 |
+-------------------+
| 2   2   2   2   2 |
+-------+   +-------+
| 1   1 | 2 | 0   0 |
|       +---+       |
| 1   1 | 0   0   0 |
|       |           |
| 1   1 | 0   0   0 |
+-------+-----------+"
`;

exports[`Grid rendering render 3`] = `
"+-----------------------+---------------+
| [41m[30m2[39m[49m   [41m[30m2[39m[49m   [41m[30m2[39m[49m   [41m[30m2[39m[49m   [41m[30m2[39m[49m   [41m[30m2[39m[49m | [106m[30m3[39m[49m   [106m[30m3[39m[49m   [106m[30m3[39m[49m   [106m[30m3[39m[49m |
|                       |           +---+
| [41m[30m2[39m[49m   [41m[30m2[39m[49m   [41m[30m2[39m[49m   [41m[30m2[39m[49m   [41m[30m2[39m[49m   [41m[30m2[39m[49m | [106m[30m3[39m[49m   [106m[30m3[39m[49m   [106m[30m3[39m[49m | [95m0[39m |
+---------------+       |           |   |
| [34m1[39m   [34m1[39m   [34m1[39m   [34m1[39m | [41m[30m2[39m[49m   [41m[30m2[39m[49m | [106m[30m3[39m[49m   [106m[30m3[39m[49m   [106m[30m3[39m[49m | [95m0[39m |
|               +---+---+-------+   |   |
| [34m1[39m   [34m1[39m   [34m1[39m   [34m1[39m   [34m1[39m | [95m0[39m   [95m0[39m   [95m0[39m | [106m[30m3[39m[49m | [95m0[39m |
|                   |           +---+   |
| [34m1[39m   [34m1[39m   [34m1[39m   [34m1[39m   [34m1[39m | [95m0[39m   [95m0[39m   [95m0[39m   [95m0[39m   [95m0[39m |
+-------------------+-------------------+"
`;

exports[`Grid rendering render 4`] = `
"+-----------------------+---------------+
| 2   2   2   2   2   2 | 3   3   3   3 |
|                       |           +---+
| 2   2   2   2   2   2 | 3   3   3 | 0 |
+---------------+       |           |   |
| 1   1   1   1 | 2   2 | 3   3   3 | 0 |
|               +---+---+-------+   |   |
| 1   1   1   1   1 | 0   0   0 | 3 | 0 |
|                   |           +---+   |
| 1   1   1   1   1 | 0   0   0   0   0 |
+-------------------+-------------------+"
`;

exports[`Grid rendering render 5`] = `
"+-------------------+
| [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m |
|                   |
| [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m |
+---+           +---+
| [44m[30m2[39m[49m | [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m | [44m[30m2[39m[49m |
|   +-----------+   |
| [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m |
|                   |
| [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m   [44m[30m2[39m[49m |
|       +-----------+
| [44m[30m2[39m[49m   [44m[30m2[39m[49m | [95m1[39m   [95m1[39m   [95m1[39m |
+-------+           |
| [106m[30m0[39m[49m   [106m[30m0[39m[49m | [95m1[39m   [95m1[39m   [95m1[39m |
|       |           |
| [106m[30m0[39m[49m   [106m[30m0[39m[49m | [95m1[39m   [95m1[39m   [95m1[39m |
|       |           |
| [106m[30m0[39m[49m   [106m[30m0[39m[49m | [95m1[39m   [95m1[39m   [95m1[39m |
|       +---+       |
| [106m[30m0[39m[49m   [106m[30m0[39m[49m   [106m[30m0[39m[49m | [95m1[39m   [95m1[39m |
+-----------+-------+"
`;

exports[`Grid rendering render 6`] = `
"+-------------------+
| 3   3   3   3   3 |
|                   |
| 3   3   3   3   3 |
+---+           +---+
| 2 | 3   3   3 | 2 |
|   +-----------+   |
| 2   2   2   2   2 |
|                   |
| 2   2   2   2   2 |
|       +-----------+
| 2   2 | 1   1   1 |
+-------+           |
| 0   0 | 1   1   1 |
|       |           |
| 0   0 | 1   1   1 |
|       |           |
| 0   0 | 1   1   1 |
|       +---+       |
| 0   0   0 | 1   1 |
+-----------+-------+"
`;

exports[`Grid rendering render 7`] = `
"+---------------------------------------+
| [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m |
|                                   +---+
| [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m | [96m1[39m |
+-------+                       +---+   |
| [95m2[39m   [95m2[39m | [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m   [32m3[39m | [96m1[39m   [96m1[39m |
|       +-------+           +---+       |
| [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m | [32m3[39m   [32m3[39m   [32m3[39m | [95m2[39m | [96m1[39m   [96m1[39m |
|               +-----------+   |       |
| [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m | [96m1[39m   [96m1[39m |
|                       +-------+       |
| [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m   [95m2[39m | [96m1[39m   [96m1[39m   [96m1[39m   [96m1[39m |
+---+   +-------+       |               |
| [101m[30m0[39m[49m | [95m2[39m | [101m[30m0[39m[49m   [101m[30m0[39m[49m | [95m2[39m   [95m2[39m | [96m1[39m   [96m1[39m   [96m1[39m   [96m1[39m |
|   +---+       +---+---+               |
| [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m | [96m1[39m   [96m1[39m   [96m1[39m   [96m1[39m   [96m1[39m |
|                   |                   |
| [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m | [96m1[39m   [96m1[39m   [96m1[39m   [96m1[39m   [96m1[39m |
|                   +-------+           |
| [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m   [101m[30m0[39m[49m | [96m1[39m   [96m1[39m   [96m1[39m |
+---------------------------+-----------+"
`;

exports[`Grid rendering render 8`] = `
"+---------------------------------------+
| 3   3   3   3   3   3   3   3   3   3 |
|                                   +---+
| 3   3   3   3   3   3   3   3   3 | 1 |
+-------+                       +---+   |
| 2   2 | 3   3   3   3   3   3 | 1   1 |
|       +-------+           +---+       |
| 2   2   2   2 | 3   3   3 | 2 | 1   1 |
|               +-----------+   |       |
| 2   2   2   2   2   2   2   2 | 1   1 |
|                       +-------+       |
| 2   2   2   2   2   2 | 1   1   1   1 |
+---+   +-------+       |               |
| 0 | 2 | 0   0 | 2   2 | 1   1   1   1 |
|   +---+       +---+---+               |
| 0   0   0   0   0 | 1   1   1   1   1 |
|                   |                   |
| 0   0   0   0   0 | 1   1   1   1   1 |
|                   +-------+           |
| 0   0   0   0   0   0   0 | 1   1   1 |
+---------------------------+-----------+"
`;

exports[`Grid rendering render 9`] = `
"+----+---------+--------+
|  [33m5[39m |  [94m3[39m    [94m3[39m |  [46m[30m4[39m[49m   [46m[30m4[39m[49m |
+----+---------+----+---+
| [103m[30m13[39m[49m |  [41m[30m2[39m[49m    [41m[30m2[39m[49m |  [95m9[39m | [42m[30m8[39m[49m |
+----+---------+----+---+
| [92m10[39m | [91m12[39m   [91m12[39m | [45m[30m11[39m[49m | [44m[30m7[39m[49m |
|    +----+----+----+   |
| [92m10[39m | [96m15[39m | [106m[30m14[39m[49m |  [101m[30m0[39m[49m | [44m[30m7[39m[49m |
+----+----+    |    +---+
|  [32m6[39m |  [105m[30m1[39m[49m | [106m[30m14[39m[49m |  [101m[30m0[39m[49m   [101m[30m0[39m[49m |
+----+----+----+--------+"
`;

exports[`Grid rendering render 10`] = `
"+----+---------+--------+
|  5 |  3    3 |  4   4 |
+----+---------+----+---+
| 13 |  2    2 |  9 | 8 |
+----+---------+----+---+
| 10 | 12   12 | 11 | 7 |
|    +----+----+----+   |
| 10 | 15 | 14 |  0 | 7 |
+----+----+    |    +---+
|  6 |  1 | 14 |  0   0 |
+----+----+----+--------+"
`;

exports[`Grid rendering render 11`] = `
"+--------------+----------------+---------+----+
|  [34m5[39m    [34m5[39m    [34m5[39m | [42m[30m3[39m[49m   [42m[30m3[39m[49m   [42m[30m3[39m[49m    [42m[30m3[39m[49m |  [44m[30m4[39m[49m    [44m[30m4[39m[49m |  [104m[30m6[39m[49m |
|         +----+---+------------+----+    |    |
|  [34m5[39m    [34m5[39m |  [101m[30m9[39m[49m | [35m8[39m | [36m2[39m   [36m2[39m    [36m2[39m | [105m[30m13[39m[49m |  [44m[30m4[39m[49m |  [104m[30m6[39m[49m |
+---------+    |   +---+---+----+    +----+----+
|  [101m[30m9[39m[49m    [101m[30m9[39m[49m    [101m[30m9[39m[49m | [35m8[39m   [35m8[39m | [92m7[39m | [32m12[39m | [105m[30m13[39m[49m | [41m[30m11[39m[49m | [43m[30m14[39m[49m |
+--------------+-------+   |    +----+    |    |
| [106m[30m15[39m[49m   [106m[30m15[39m[49m   [106m[30m15[39m[49m | [94m1[39m   [94m1[39m | [92m7[39m | [32m12[39m | [41m[30m11[39m[49m   [41m[30m11[39m[49m | [43m[30m14[39m[49m |
+--------------+       |   +----+---------+    |
| [103m[30m10[39m[49m   [103m[30m10[39m[49m   [103m[30m10[39m[49m | [94m1[39m   [94m1[39m | [92m7[39m |  [31m0[39m    [31m0[39m    [31m0[39m | [43m[30m14[39m[49m |
+--------------+-------+---+--------------+----+"
`;

exports[`Grid rendering render 12`] = `
"+--------------+----------------+---------+----+
|  5    5    5 | 3   3   3    3 |  4    4 |  6 |
|         +----+---+------------+----+    |    |
|  5    5 |  9 | 8 | 2   2    2 | 13 |  4 |  6 |
+---------+    |   +---+---+----+    +----+----+
|  9    9    9 | 8   8 | 7 | 12 | 13 | 11 | 14 |
+--------------+-------+   |    +----+    |    |
| 15   15   15 | 1   1 | 7 | 12 | 11   11 | 14 |
+--------------+       |   +----+---------+    |
| 10   10   10 | 1   1 | 7 |  0    0    0 | 14 |
+--------------+-------+---+--------------+----+"
`;

exports[`Grid rendering render 13`] = `
"+--------+----+----+----+
| [42m[30m5[39m[49m    [42m[30m5[39m[49m |  [36m3[39m |  [44m[30m4[39m[49m |  [92m6[39m |
|   +----+    |    |    |
| [42m[30m5[39m[49m |  [36m3[39m    [36m3[39m |  [44m[30m4[39m[49m |  [92m6[39m |
+---+----+----+    |    |
| [96m2[39m    [96m2[39m | [34m13[39m |  [44m[30m4[39m[49m |  [92m6[39m |
|        |    +----+    |
| [96m2[39m    [96m2[39m | [34m13[39m   [34m13[39m |  [92m6[39m |
+--------+----+----+----+
| [91m9[39m    [91m9[39m    [91m9[39m |  [103m[30m8[39m[49m    [103m[30m8[39m[49m |
+---+----+----+    +----+
| [43m[30m7[39m[49m | [32m12[39m | [46m[30m15[39m[49m |  [103m[30m8[39m[49m | [45m[30m14[39m[49m |
|   |    |    +----+    |
| [43m[30m7[39m[49m | [32m12[39m | [46m[30m15[39m[49m | [106m[30m11[39m[49m | [45m[30m14[39m[49m |
|   |    +----+    |    |
| [43m[30m7[39m[49m | [32m12[39m | [106m[30m11[39m[49m   [106m[30m11[39m[49m | [45m[30m14[39m[49m |
|   +----+----+----+----+
| [43m[30m7[39m[49m | [104m[30m10[39m[49m   [104m[30m10[39m[49m |  [93m1[39m    [93m1[39m |
+---+---------+         |
| [95m0[39m    [95m0[39m    [95m0[39m |  [93m1[39m    [93m1[39m |
+-------------+---------+"
`;

exports[`Grid rendering render 14`] = `
"+--------+----+----+----+
| 5    5 |  3 |  4 |  6 |
|   +----+    |    |    |
| 5 |  3    3 |  4 |  6 |
+---+----+----+    |    |
| 2    2 | 13 |  4 |  6 |
|        |    +----+    |
| 2    2 | 13   13 |  6 |
+--------+----+----+----+
| 9    9    9 |  8    8 |
+---+----+----+    +----+
| 7 | 12 | 15 |  8 | 14 |
|   |    |    +----+    |
| 7 | 12 | 15 | 11 | 14 |
|   |    +----+    |    |
| 7 | 12 | 11   11 | 14 |
|   +----+----+----+----+
| 7 | 10   10 |  1    1 |
+---+---------+         |
| 0    0    0 |  1    1 |
+-------------+---------+"
`;

exports[`Grid rendering render 15`] = `
"+------------+---------+-------------------+----+
|  [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m |  [101m[30m5[39m[49m    [101m[30m5[39m[49m |  [32m4[39m    [32m4[39m    [32m4[39m    [32m4[39m |  [46m[30m6[39m[49m |
|            |         +----+         +----+    |
|  [43m[30m3[39m[49m   [43m[30m3[39m[49m   [43m[30m3[39m[49m |  [101m[30m5[39m[49m    [101m[30m5[39m[49m    [101m[30m5[39m[49m |  [32m4[39m    [32m4[39m |  [46m[30m6[39m[49m    [46m[30m6[39m[49m |
+----+---+   +----+         |         |         |
| [44m[30m13[39m[49m | [91m2[39m | [43m[30m3[39m[49m    [43m[30m3[39m[49m |  [101m[30m5[39m[49m    [101m[30m5[39m[49m |  [32m4[39m    [32m4[39m |  [46m[30m6[39m[49m    [46m[30m6[39m[49m |
|    |   +---+----+---------+----+----+----+    |
| [44m[30m13[39m[49m | [91m2[39m   [91m2[39m | [34m10[39m   [34m10[39m   [34m10[39m | [31m14[39m |  [103m[30m9[39m[49m    [103m[30m9[39m[49m |  [46m[30m6[39m[49m |
|    |   +---+    +---------+    |         |    |
| [44m[30m13[39m[49m | [91m2[39m | [92m8[39m | [34m10[39m | [31m14[39m   [31m14[39m   [31m14[39m |  [103m[30m9[39m[49m    [103m[30m9[39m[49m |  [46m[30m6[39m[49m |
|    |   |   |    |              |         +----+
| [44m[30m13[39m[49m | [91m2[39m | [92m8[39m | [34m10[39m | [31m14[39m   [31m14[39m   [31m14[39m |  [103m[30m9[39m[49m    [103m[30m9[39m[49m    [103m[30m9[39m[49m |
|    +---+   |    +----+---------+----+---------+
| [44m[30m13[39m[49m | [92m8[39m   [92m8[39m | [34m10[39m   [34m10[39m |  [104m[30m7[39m[49m    [104m[30m7[39m[49m    [104m[30m7[39m[49m | [106m[30m15[39m[49m   [106m[30m15[39m[49m |
+----+   +---+---------+         +----+         |
|  [92m8[39m   [92m8[39m | [105m[30m0[39m[49m | [94m12[39m   [94m12[39m |  [104m[30m7[39m[49m    [104m[30m7[39m[49m | [106m[30m15[39m[49m   [106m[30m15[39m[49m   [106m[30m15[39m[49m |
|    +---+   +----+    +---------+--------------+
|  [92m8[39m | [105m[30m0[39m[49m   [105m[30m0[39m[49m    [105m[30m0[39m[49m | [94m12[39m | [96m11[39m   [96m11[39m |  [102m[30m1[39m[49m    [102m[30m1[39m[49m    [102m[30m1[39m[49m |
+----+            |    |         +----+         |
|  [105m[30m0[39m[49m   [105m[30m0[39m[49m   [105m[30m0[39m[49m    [105m[30m0[39m[49m | [94m12[39m | [96m11[39m   [96m11[39m   [96m11[39m |  [102m[30m1[39m[49m    [102m[30m1[39m[49m |
+-----------------+----+--------------+---------+"
`;

exports[`Grid rendering render 16`] = `
"+------------+---------+-------------------+----+
|  3   3   3 |  5    5 |  4    4    4    4 |  6 |
|            |         +----+         +----+    |
|  3   3   3 |  5    5    5 |  4    4 |  6    6 |
+----+---+   +----+         |         |         |
| 13 | 2 | 3    3 |  5    5 |  4    4 |  6    6 |
|    |   +---+----+---------+----+----+----+    |
| 13 | 2   2 | 10   10   10 | 14 |  9    9 |  6 |
|    |   +---+    +---------+    |         |    |
| 13 | 2 | 8 | 10 | 14   14   14 |  9    9 |  6 |
|    |   |   |    |              |         +----+
| 13 | 2 | 8 | 10 | 14   14   14 |  9    9    9 |
|    +---+   |    +----+---------+----+---------+
| 13 | 8   8 | 10   10 |  7    7    7 | 15   15 |
+----+   +---+---------+         +----+         |
|  8   8 | 0 | 12   12 |  7    7 | 15   15   15 |
|    +---+   +----+    +---------+--------------+
|  8 | 0   0    0 | 12 | 11   11 |  1    1    1 |
+----+            |    |         +----+         |
|  0   0   0    0 | 12 | 11   11   11 |  1    1 |
+-----------------+----+--------------+---------+"
`;
